# openapi/openapi.yaml
@@ -41,6 +41,18 @@ paths:
     $ref: './languages/paths/languages.yaml'
   '/languages/{languageId}':
     $ref: './languages/paths/languages.id.yaml'
+  '/reports/sales':
+    $ref: './reports/paths/reports.sales.yaml'
+  '/reports/orders':
+    $ref: './reports/paths/reports.orders.yaml'
+  '/reports/orders/customers':
+    $ref: './reports/paths/reports.orders.customers.yaml'
+  '/reports/orders/averages':
+    $ref: './reports/paths/reports.orders.averages.yaml'
+  '/reports/products/best-sellers':
+    $ref: './reports/paths/reports.products.best-sellers.yaml'
+  '/reports/metrics/{subject}':
+    $ref: './reports/paths/reports.metrics.yaml'
 ### BELOW: Paths that have not been updated
   /orders:
     get:
@@ -3319,552 +3331,6 @@ paths:
                 $ref: '#/components/schemas/Error'
       operationId: post-products-id-publish
       description: Publish a draft from a Product
-  /reports/sales:
-    get:
-      summary: Get sales report
-      tags:
-        - Reports
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  labels:
-                    type: array
-                    items:
-                      type: string
-                  datasets:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        label:
-                          type: string
-                        backgroundColor:
-                          type: string
-                        yAxisId:
-                          type: string
-                        borderColor:
-                          type: string
-                        data:
-                          type: array
-                          items:
-                            type: string
-                        fill:
-                          type: boolean
-              examples:
-                monthly-example:
-                  value:
-                    labels:
-                      - January 2019
-                      - February 2019
-                      - March 2019
-                      - April 2019
-                      - May 2019
-                      - June 2019
-                      - July 2019
-                      - August 2019
-                      - September 2019
-                      - October 2019
-                      - November 2019
-                      - December 2019
-                    datasets:
-                      - label: Orders
-                        backgroundColor: '#E7028C'
-                        yAxisID: A
-                        borderColor: '#E7028C'
-                        data:
-                          - 4803
-                          - 4703
-                          - 5147
-                          - 4805
-                          - 4964
-                          - 4907
-                          - 5525
-                          - 4734
-                          - 5210
-                          - 5733
-                          - 4867
-                          - 3258
-                        fill: false
-                      - label: Revenue
-                        backgroundColor: '#0099e5'
-                        yAxisID: B
-                        borderColor: '#0099e5'
-                        data:
-                          - '44492929'
-                          - '42988674'
-                          - '46779741'
-                          - '43873165'
-                          - '45938827'
-                          - '47167482'
-                          - '52133245'
-                          - '43647302'
-                          - '48852965'
-                          - '54670528'
-                          - '46422960'
-                          - '31355558'
-                        fill: false
-                weekly-example:
-                  value:
-                    labels:
-                      - Week Comm. 02/01/2020
-                      - Week Comm. 06/01/2020
-                      - Week Comm. 16/01/2020
-                      - Week Comm. 20/01/2020
-                      - Week Comm. 29/01/2020
-                    datasets:
-                      - label: Orders
-                        backgroundColor: '#E7028C'
-                        yAxisID: A
-                        borderColor: '#E7028C'
-                        data:
-                          - 347
-                          - 1297
-                          - 1335
-                          - 1314
-                          - 1231
-                        fill: false
-                      - label: Revenue
-                        backgroundColor: '#0099e5'
-                        yAxisID: B
-                        borderColor: '#0099e5'
-                        data:
-                          - '2980381'
-                          - '13029474'
-                          - '12304326'
-                          - '12530776'
-                          - '10988167'
-                        fill: false
-                daily-example:
-                  value:
-                    labels:
-                      - 1st January 2020
-                      - 2nd January 2020
-                      - 3rd January 2020
-                      - 4th January 2020
-                      - 5th January 2020
-                      - 6th January 2020
-                      - 7th January 2020
-                    datasets:
-                      - label: Orders
-                        backgroundColor: '#E7028C'
-                        yAxisID: A
-                        borderColor: '#E7028C'
-                        data:
-                          - 20
-                          - 157
-                          - 121
-                          - 22
-                          - 27
-                          - 247
-                          - 255
-                        fill: false
-                      - label: Revenue
-                        backgroundColor: '#0099e5'
-                        yAxisID: B
-                        borderColor: '#0099e5'
-                        data:
-                          - '102132'
-                          - '1370854'
-                          - '1096602'
-                          - '161444'
-                          - '249349'
-                          - '2925187'
-                          - '2263469'
-                        fill: false
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  errors:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        from:
-                          type: array
-                          items:
-                            type: string
-                        to:
-                          type: array
-                          items:
-                            type: string
-              examples:
-                unprocessable-example:
-                  value:
-                    message: The given data was invalid.
-                    errors:
-                      from:
-                        - The from field is required.
-                        - The from is not a valid date.
-                      to:
-                        - The to field is required.
-                        - The to is not a valid date.
-      operationId: get-reports-sales
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: from
-          description: The from date
-          required: true
-        - schema:
-            type: string
-          in: query
-          name: to
-          description: The to date
-        - schema:
-            type: string
-            enum:
-              - weekly
-              - monthly
-              - daily
-          in: query
-          name: mode
-          description: The dataset mode
-      description: |-
-        This endpoints returns sales report figures.
-
-        > Currently this provides data suitable for chartjs.org but this is subject to change and be more decoupled in a future release.
-  /reports/orders:
-    get:
-      summary: Get sales report
-      tags:
-        - Reports
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    month:
-                      type: string
-                    sub_total:
-                      type: string
-                    delivery_total:
-                      type: string
-                    tax_total:
-                      type: string
-                    order_total:
-                      type: string
-                    discount_total:
-                      type: string
-              examples:
-                dataset-example:
-                  value:
-                    - month: March 2020
-                      sub_total: '2163897'
-                      delivery_total: '145489'
-                      tax_total: '460781'
-                      order_total: '2770167'
-                      discount_total: '0'
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  errors:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        from:
-                          type: array
-                          items:
-                            type: string
-                        to:
-                          type: array
-                          items:
-                            type: string
-              examples:
-                invalid-missing-data-example:
-                  value:
-                    message: The given data was invalid.
-                    errors:
-                      from:
-                        - The from field is required.
-                        - The from is not a valid date.
-                      to:
-                        - The to field is required.
-                        - The to is not a valid date.
-      operationId: get-reports-orders
-      description: Returns a report for orders between a given date range
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: from
-          description: The from date
-        - schema:
-            type: string
-          in: query
-          name: to
-          description: The to date
-  /reports/orders/customers:
-    get:
-      summary: Get Customer Report
-      tags:
-        - Reports
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  '202003':
-                    type: object
-                    properties:
-                      label:
-                        type: string
-                      new:
-                        type: integer
-                      returning:
-                        type: integer
-                      total:
-                        type: integer
-              examples:
-                basic-example:
-                  value:
-                    '202003':
-                      label: March 2020
-                      new: 204
-                      returning: 1980
-                      total: 2184
-      operationId: get-reports-orders-customers
-      description: Returns a monthly grouped list of new/returning and total customers.
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: from
-          description: The from date
-        - schema:
-            type: string
-          in: query
-          name: to
-          description: The to date
-  /reports/orders/averages:
-    get:
-      summary: Get order averages
-      tags:
-        - Reports
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    date:
-                      type: string
-                    sub_total:
-                      type: string
-                    delivery_total:
-                      type: string
-                    tax_total:
-                      type: string
-                    order_total:
-                      type: string
-                    discount_total:
-                      type: string
-              examples:
-                monthly-example:
-                  value:
-                    - date: March 2020
-                      sub_total: '8303'
-                      delivery_total: '519'
-                      tax_total: '1762'
-                      order_total: '10584'
-                      discount_total: '6'
-                weekly-example:
-                  value:
-                    - date: Week Comm. 02/03/2020
-                      sub_total: '7904'
-                      delivery_total: '535'
-                      tax_total: '1686'
-                      order_total: '10125'
-                      discount_total: '0'
-      operationId: get-reports-orders-averages
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: from
-          description: The from date
-        - schema:
-            type: string
-          in: query
-          name: to
-          description: The to date
-        - schema:
-            type: string
-            enum:
-              - weekly
-              - daily
-              - yearly
-              - monthly
-          in: query
-          name: mode
-          description: ''
-      description: Returns an array of order averages between a given date range.
-  /reports/products/best-sellers:
-    get:
-      summary: Get best selling products
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  date:
-                    type: object
-                    properties:
-                      products:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            product_count:
-                              type: integer
-                            description:
-                              type: string
-                            sku:
-                              type: string
-                            month:
-                              type: string
-              examples:
-                result-example:
-                  value:
-                    '2020-02-01T10:53:53.000000Z':
-                      products:
-                        - product_count: 149
-                          description: Bertie botts every flavor beans
-                          sku: bbefb
-                          month: '2020-02-01'
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  errors:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        from:
-                          type: array
-                          items:
-                            type: string
-                        to:
-                          type: array
-                          items:
-                            type: string
-              examples:
-                unprocessable-example:
-                  value:
-                    message: The given data was invalid.
-                    errors:
-                      from:
-                        - The from field is required.
-                      to:
-                        - The to field is required.
-      operationId: get-products-best-sellers
-      description: Gets best selling products grouped by month.
-      tags:
-        - Reports
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: from
-          description: The from date
-        - schema:
-            type: string
-          in: query
-          name: to
-          description: The to date
-    parameters: []
-  '/reports/metrics/{subject}':
-    parameters:
-      - schema:
-          type: string
-          enum:
-            - sales
-            - orders
-        name: subject
-        in: path
-        required: true
-    get:
-      summary: Get metric data
-      tags:
-        - Reports
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  current_month:
-                    type: string
-                  previous_month:
-                    type: string
-                  today:
-                    type: string
-                  yesterday:
-                    type: string
-                  current_week:
-                    type: string
-                  previous_week:
-                    type: string
-              examples:
-                orders-example:
-                  value:
-                    current_month: 0
-                    previous_month: 1077
-                    today: 0
-                    yesterday: 0
-                    current_week: 0
-                    previous_week: 0
-                sales-example:
-                  value:
-                    current_month: 0
-                    previous_month: '8626214'
-                    today: 0
-                    yesterday: 0
-                    current_week: 0
-                    previous_week: 0
-      operationId: get-reports-metrics-subject
-      description: Returns metric (KPI) data for either sales or orders.
   /products:
     get:
       summary: Get Products
